<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/textMetros"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_metros" />
	
	    <EditText
	        android:id="@+id/editTextMetros"        
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:ems="10"
	        android:inputType="number" >
	    </EditText>
	        
	</LinearLayout>    
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/textPessoas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_pessoas" />
	
	    <EditText
	        android:id="@+id/editTextPessoas"        
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:ems="10"
	        android:inputType="number" >
	    </EditText>
	        
	</LinearLayout>
        
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/textEquipamentos"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_equipamento" />
	
	    <EditText
	        android:id="@+id/editTextEquipamentos"        
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:ems="10"
	        android:inputType="number" >
	    </EditText>
	        
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

	    <CheckBox
	        android:id="@+id/checkBox1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_isolado" />
	        
	</LinearLayout>    
    
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_LimparCampos"
             android:onClick="limparCampos" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Calcular" 
            android:onClick="calcular" />
	        
	</LinearLayout>        
    
    
</LinearLayout>
